# heat

./: .vnv-config.json  CMakeLists.txt  heat.cpp  vv-input.json
docker/: Dockerfile
vnv/: Dockerfile
